--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,268 +1,4 @@
 .page {
-  margin: 0 auto;
-  min-height: 100vh;
-}
-
-.main {
-  max-width: 1110px;
-  margin: 0 auto;
-}
-
-/* Header */
-
-.header {
-  max-width: 1110px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 50px;
-  padding-bottom: 67px;
-}
-
-.request-beta_secondary {
-  font-size: var(--fs-heading-base);
-  line-height: 2;
-  font-weight: var(--fw-bold);
-  color: var(--clr-dark-blue);
-  padding: 11px 23px;
-  border: 1px solid var(--clr-dark-blue);
-  border-radius: 6px;
-  background-color: transparent;
-  letter-spacing: -0.16px;
-  transition: 0.3s ease;
-}
-
-.request-beta_secondary:hover {
-  transition: 0.3s ease;
-  color: var(--clr-cream-white);
-  background-color: var(--clr-dark-blue);
-}
-
-/* Hero */
-
-.hero {
-  display: flex;
-  align-items: center;
-  z-index: 999;
-}
-
-.hero__cta {
-  max-width: 820px;
-  width: 100%;
-  position: relative;
-  padding-bottom: 92px;
-  padding-top: 45.68px;
-}
-
-.hero__cta-header-container {
-  display: flex;
-  flex-direction: column;
-  max-width: 635px;
-}
-
-.hero__cta-title {
-  font-size: var(--fs-biggest);
-  font-weight: var(--fw-bold);
-  letter-spacing: -1px;
-  line-height: 1.08;
-  text-align: left;
-
-  margin-bottom: 40px;
-}
-
-.hero__cta-title_regular {
-  font-weight: var(--fw-base);
-}
-
-.curvedline__container {
-  align-self: flex-end;
-  margin-bottom: 21px;
-  padding-right: 50px;
-}
-
-.hero__cta-text {
-  font-size: var(--fw-base);
-  color: var(--clr-gray);
-  line-height: 2rem;
-  letter-spacing: 0.1px;
-  margin-bottom: 52px;
-  max-width: 350px;
-}
-
-.request-beta_primary {
-  font-size: var(--fs-base);
-  line-height: 1.4;
-  font-weight: var(--fw-bold);
-  color: var(--clr-cream-white);
-  padding: 15px 31px 14px 32px;
-  border: 1px solid transparent;
-  border-radius: 6px;
-  background: var(--clr-dark-blue);
-  letter-spacing: -0.18px;
-}
-
-.request-beta_primary:hover {
-  border: 1px solid transparent;
-  background: linear-gradient(
-    135deg,
-    var(--clr-purple) 0%,
-    var(--clr-pink) 49.21%,
-    var(--clr-yellow) 100%
-  );
-}
-
-.hero__stat-container {
-  max-width: 286px;
-  margin: 0 auto;
-}
-
-.hero__stats {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 63px;
-}
-
-.hero__stat-number {
-  font-size: var(--fs-big);
-  font-weight: var(--fw-bold);
-  letter-spacing: -0.5px;
-  line-height: 1.16;
-}
-
-.hero__stat-name {
-  color: var(--clr-gray);
-  font-size: var(--fs-heading-base);
-  font-weight: var(--fw-base);
-  letter-spacing: 2.5px;
-  line-height: 1.625;
-  text-transform: uppercase;
-}
-
-.hero__image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  z-index: -1;
-}
-
-/* testimonial */
-
-.testimonial {
-  background-color: var(--clr-dark-blue);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  margin-top: 144px;
-  color: var(--clr-cream-white);
-}
-
-.testimonial__image-container {
-  z-index: 0;
-  margin-top: -55px;
-  position: relative;
-}
-
-.testimonial__image {
-  max-height: 600px;
-}
-
-.testimonial__pattern {
-  position: absolute;
-  bottom: -15px;
-  left: -70px;
-  z-index: -1;
-}
-
-.testimonial__curvedLine {
-  padding-left: 30px;
-  padding-right: 52.75px;
-  margin-bottom: 175px;
-}
-
-.testimonial__content {
-  max-width: 350px;
-}
-
-.testimonial__content-title {
-  font-size: var(--fs-big);
-  font-weight: var(--fw-bold);
-  line-height: 1.16;
-  letter-spacing: -0.5px;
-}
-
-.testimonial__content-title_regular {
-  font-weight: var(--fw-base);
-}
-
-.testimonial__content-quote {
-  margin: 40px 0;
-  font-size: var(--fs-quote);
-  font-weight: var(--fw-base);
-  line-height: 1.75;
-}
-
-.testimonial__content-caption {
-  font-size: var(--fs-base);
-  font-weight: var(--fw-bold);
-  letter-spacing: -0.5px;
-  line-height: 2;
-}
-
-.testimonial__content-caption_span {
-  display: block;
-  font-size: var(--fs-heading-base);
-  font-weight: var(--fw-base);
-  line-height: 1.625;
-  letter-spacing: 2.5px;
-}
-
-/* Footer */
-
-.footer {
-  background-color: var(--clr-cream);
-  height: 464px;
-  margin-top: -275px;
-  z-index: -2;
-  position: relative;
-  display: flex;
-}
-
-.footer__container {
-  max-width: 1100px;
-  width: 100%;
-  align-self: flex-end;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 0;
-  padding-bottom: 72px;
-  padding-top: 90px;
-}
-
-.footer__logo {
-  width: 81px;
-}
-
-.footer__copyright {
-  font-size: var(--fs-small);
-  color: var(--clr-gray);
-  line-height: 2;
-  letter-spacing: 0.08px;
-}
-
-.footer__social-icons {
-  display: flex;
-  align-items: center;
-  gap: 28px;
-}
-
-.social-icon__button {
-  background: none;
-  border: none;
-  padding: 0;
+  /* margin: 0 auto; */
+  /* min-height: 100vh; */
 }
