--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -53,3 +53,34 @@
 .social-icon {
   fill: currentColor;
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    height: 650px;
+    margin-top: -475px;
+  }
+
+  .footer__container {
+    max-width: 689px;
+    padding-top: 72px;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .footer__container {
+    margin: 0 16px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .footer {
+    height: 350px;
+    margin-top: -60px;
+  }
+
+  .footer__container {
+    flex-direction: column;
+    gap: 33px;
+    margin: 0 16px;
+  }
+}
