--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,4 @@
-.hero {
+/* .hero {
   display: flex;
   align-items: center;
   z-index: 999;
@@ -219,4 +219,4 @@
     flex-direction: column;
     gap: 32px;
   }
-}
+} */
