--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -2,22 +2,34 @@
   background-color: var(--clr-dark-blue);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   border-radius: 15px;
-  margin-top: 144px;
   color: var(--clr-cream-white);
-  z-index: 4;
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 199px;
+  width: min(95%, 1110px);
+  margin: 0 auto;
+  display: flex;
+  padding: 0 125px 0 112px;
 }
 
 .testimonial__image-container {
-  z-index: 0;
-  margin-top: -55px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
+  min-width: 40%;
+  align-self: flex-end;
+  min-height: 222.852px;
 }
 
 .testimonial__image {
-  max-height: 600px;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  max-width: 375px;
 }
 
 .testimonial__image_small {
@@ -27,18 +39,29 @@
 .testimonial__pattern {
   position: absolute;
   bottom: -15px;
-  left: -70px;
-  z-index: -1;
+  right: -20px;
+  z-index: 0;
+}
+
+.tes {
+  align-self: center;
+  width: unset;
+}
+
+.testimonial__curvedLine-container {
+  align-self: center;
+  margin-bottom: 175px;
 }
 
 .testimonial__curvedLine {
-  padding-left: 30px;
-  padding-right: 52.75px;
-  margin-bottom: 175px;
+  margin: 0 auto;
+  align-self: center;
+  width: unset;
 }
 
 .testimonial__content {
   max-width: 350px;
+  padding: 88px 0;
 }
 
 .testimonial__content-title {
@@ -73,7 +96,7 @@
   line-height: 1.625;
   letter-spacing: 2.5px;
 }
-
+/* 
 @media screen and (max-width: 768px) {
   .testimonial {
     flex-direction: column;
@@ -137,4 +160,4 @@
     margin-top: 237px;
     padding: 0 54px 64px 54px;
   }
-}
+} */
