--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -11,7 +11,6 @@
   bottom: 199px;
   width: min(95%, 1110px);
   margin: 0 auto;
-  display: flex;
   padding: 0 125px 0 112px;
 }
 
@@ -41,11 +40,6 @@
   bottom: -15px;
   right: -20px;
   z-index: 0;
-}
-
-.tes {
-  align-self: center;
-  width: unset;
 }
 
 .testimonial__curvedLine-container {
@@ -96,16 +90,31 @@
   line-height: 1.625;
   letter-spacing: 2.5px;
 }
-/* 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 1090px) {
+  .testimonial {
+    padding: 0 62.5px 0 56px;
+  }
+}
+
+@media screen and (max-width: 960px) {
   .testimonial {
     flex-direction: column;
-    margin-top: 273px;
-    padding: 0 58px 64px 58px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    bottom: 199px;
+    padding: 0 1rem 4rem 1rem;
   }
 
   .testimonial__image-container {
-    margin-top: -180px;
+    display: flex;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    min-width: 20%;
+    width: 100%;
+    align-self: center;
+    min-height: 222.852px;
   }
 
   .testimonial__image {
@@ -114,24 +123,33 @@
 
   .testimonial__image_small {
     display: block;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
     max-width: 252px;
   }
 
   .testimonial__pattern {
-    bottom: -50px;
-    left: -20px;
+    right: 50%;
+    transform: translateX(50%);
+    max-width: 291.072px;
   }
 
-  .testimonial__curvedLine {
-    padding: 0;
-    margin-top: 40px;
-    margin-bottom: 37px;
-    max-width: 49px;
+  .testimonial__curvedLine-container {
+    margin-bottom: 0;
+    padding: 40px 0 37px;
   }
 
   .testimonial__content {
+    max-width: 573px;
     text-align: center;
-    max-width: 100%;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .testimonial__curvedLine-container {
+    max-width: 49px;
   }
 
   .testimonial__content-title {
@@ -145,19 +163,10 @@
     line-height: 1.77;
     letter-spacing: 0.09px;
   }
-
-  .testimonial__content-caption {
-    letter-spacing: -0.18px;
-  }
-
-  .testimonial__content-caption_span {
-    font-size: var(--fs-heading-base);
-  }
 }
 
 @media screen and (max-width: 425px) {
   .testimonial {
-    margin-top: 237px;
-    padding: 0 54px 64px 54px;
+    width: min(100%, 1110px);
   }
-} */
+}
