--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,24 +1,16 @@
 .footer {
   background-color: var(--clr-cream);
-  /* height: 464px;
-  margin-top: -275px; */
-  z-index: 0;
-  /* position: relative; */
-  padding-top: 22.5rem;
-  display: flex;
+  padding-top: 360px;
+  padding-bottom: 72px;
 }
 
 .footer__container {
-  max-width: 1100px;
-  width: 100%;
-  align-self: flex-end;
+  width: min(95%, 1110px);
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   z-index: 0;
-  padding-bottom: 72px;
-  padding-top: 90px;
 }
 
 .footer__logo {
@@ -55,15 +47,9 @@
   fill: currentColor;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .footer {
-    height: 650px;
-    margin-top: -475px;
-  }
-
-  .footer__container {
-    max-width: 689px;
-    padding-top: 72px;
+    padding-top: 550px;
   }
 }
 
@@ -74,14 +60,8 @@
 }
 
 @media screen and (max-width: 425px) {
-  .footer {
-    height: 350px;
-    margin-top: -60px;
-  }
-
   .footer__container {
     flex-direction: column;
     gap: 33px;
-    margin: 0 16px;
   }
 }
