--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -19,6 +19,7 @@
   background-color: transparent;
   letter-spacing: -0.16px;
   transition: 0.3s ease;
+  text-decoration: none;
 }
 
 .request-beta_secondary:hover {
