--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -28,10 +28,11 @@
   position: absolute;
   z-index: 2;
   bottom: 0;
+  left: 0;
   max-width: 375px;
 }
 
-.testimonial__image_small {
+.testimonial__image_mobile {
   display: none;
 }
 
@@ -109,8 +110,6 @@
 
   .testimonial__image-container {
     display: flex;
-    /* flex-direction: row; */
-    /* align-items: center; */
     min-width: 20%;
     width: 100%;
     align-self: center;
@@ -118,15 +117,10 @@
   }
 
   .testimonial__image {
-    display: none;
-  }
-
-  .testimonial__image_small {
-    display: block;
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
+    /* display: none; */
     max-width: 252px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .testimonial__pattern {
@@ -168,5 +162,18 @@
 @media screen and (max-width: 425px) {
   .testimonial {
     width: min(100%, 1110px);
+    bottom: 278px;
+  }
+
+  .testimonial__image {
+    display: none;
+  }
+
+  .testimonial__image_mobile {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    max-width: 252px;
   }
 }
